<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <include
        android:id="@+id/banner"
        layout="@layout/banner"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Background container -->
    <TextView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <!-- Title -->
    <TextView
        android:id="@+id/schedule_title"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_text_blue"
        android:gravity="center"
        android:text="Schedule Shipment"
        android:textColor="@color/im_sky_blue"
        android:textSize="50sp"
        android:fontFamily="@font/ptserif_regular"
        app:layout_constraintTop_toBottomOf="@id/banner"
        app:layout_constraintStart_toStartOf="@id/background"
        app:layout_constraintEnd_toEndOf="@id/background"/>

    <!-- Subtitle -->
    <TextView
        android:id="@+id/shipment_status_msg"
        android:layout_width="256dp"
        android:layout_height="80dp"
        android:gravity="center"
        android:text="Enter Shipment and Item information below"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:background="@drawable/background_text"
        app:layout_constraintTop_toBottomOf="@id/schedule_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <!-- Shipment ADNUM -->
    <EditText
        android:id="@+id/shipment_admin"
        android:layout_width="0dp"
        android:inputType="number"
        android:layout_height="40dp"
        android:hint="Admin ID"
        android:padding="3dp"
        android:background="@drawable/background_text_solid"
        app:layout_constraintTop_toBottomOf="@id/shipment_status_msg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"/>

    <!-- Shipment Date -->
    <EditText
        android:id="@+id/shipment_shipmentDate"
        android:layout_width="0dp"
        android:padding="3dp"
        android:layout_height="40dp"
        android:hint="Enter Scheduled Date MM-dd-yyyy"
        android:background="@drawable/background_text_solid"
        app:layout_constraintTop_toBottomOf="@id/shipment_admin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"/>

    <!-- Add Item Title -->
    <TextView
        android:id="@+id/add_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Item"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/text"
        app:layout_constraintTop_toBottomOf="@id/shipment_shipmentDate"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"/>


    <LinearLayout
        android:id="@+id/item_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toTopOf="@+id/schedule_button"
        app:layout_constraintTop_toBottomOf="@id/add_item_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <EditText
            android:id="@+id/itemNameInput"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:hint="Item Name"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintStart_toStartOf="@id/background"
            app:layout_constraintEnd_toEndOf="@id/background"
            android:background="@drawable/background_text_solid"/>

        <EditText
            android:id="@+id/storageLocationInput"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:padding="5dp"
            android:hint="Storage Location"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintStart_toStartOf="@id/background"
            app:layout_constraintEnd_toEndOf="@id/background"
            android:background="@drawable/background_text_solid"/>

        <EditText
            android:id="@+id/quantityInput"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:hint="Quantity"
            android:padding="5dp"
            android:inputType="number"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintStart_toStartOf="@id/background"
            app:layout_constraintEnd_toEndOf="@id/background"
            android:background="@drawable/background_text_solid"/>

        <EditText
            android:id="@+id/weightInput"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:hint="Weight"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="@id/background"
            app:layout_constraintEnd_toEndOf="@id/background"
            android:inputType="numberDecimal"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/background_text_solid"/>

        <EditText
            android:id="@+id/storageType"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:hint="Storage Type"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="@id/background"
            app:layout_constraintEnd_toEndOf="@id/background"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/background_text_solid"/>

        <ImageView
            android:id="@+id/addItemButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="20dp"
            android:padding="5dp"
            android:layout_gravity="end"
            android:src="@drawable/ic_add"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>

    <!-- Buttons -->
    <Button
        android:id="@+id/schedule_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="Schedule"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:backgroundTint="@color/text"
        app:cornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@id/item_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cancel_button"
        />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="Cancel"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:backgroundTint="@color/text"
        android:layout_marginBottom="20dp"
        app:cornerRadius="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/background" />

</androidx.constraintlayout.widget.ConstraintLayout>