...
        android:id="@+id/schedule_title"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_text_blue"
        android:gravity="center"
        android:text="View Shipments"
        android:textColor="@color/im_sky_blue"
        android:textSize="50sp"
        android:fontFamily="@font/ptserif_regular"
        app:layout_constraintEnd_toEndOf="@id/background"
        app:layout_constraintStart_toStartOf="@id/background"
        app:layout_constraintTop_toBottomOf="@id/banner"/>
...
